update form web3form

--- a/index.html
+++ b/index.html
@@ -694,7 +694,9 @@ Academic Helper offers a distinct advantage through its unwavering commitment to
           </div-->
 
           <div class="col-lg-12 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <!-- action="forms/contact.php" -->
+            <form action="https://api.web3forms.com/submit" method="post" role="form" class="php-email-form">
+              <input type="hidden" name="access_key" value="5af49d4f-0cd8-4608-805b-56fea1586ee9">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
