--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@ Academic Helper offers a distinct advantage through its unwavering commitment to
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
-                <div class="error-message"></div>
+                <!--div class="error-message"></div-->
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
